# Giraffe-Diaries

./: .gitignore  README.md  llm_download.py
Giraffe-Diaries/: settings.gradle.kts
Giraffe_Diaries/: README.md  firebase.json  pubspec.yaml
Giraffe_Diaries/android/: gradle.properties
Giraffe_Diaries/android/app/src/main/cpp/: CMakeLists.txt
Giraffe_Diaries/lib/: main.dart
Giraffe_Diaries/linux/: CMakeLists.txt
Giraffe_Diaries/web/: index.html
giraffe_diaries/: .gitignore  README.md  pubspec.yaml
giraffe_diaries/lib/: firebase_options.dart  main.dart  model_test.dart
giraffe_diaries/test/: widget_test.dart
giraffe_diaries/web/: index.html  manifest.json
giraffe_diaries/windows/: CMakeLists.txt
giraffe_diaries_npu/ChatApp/: build.gradle
giraffe_diaries_npu/android/: gradle.properties
llama_app/: README.md  analysis_options.yaml  pubspec.yaml
llama_app/dev/: generate_schemes.dart
llama_app/lib/: main.dart
llama_app/linux/: CMakeLists.txt
llama_app/test/: widget_test.dart
llama_app/web/: index.html  manifest.json
llama_app/windows/: CMakeLists.txt
llamalibrary_ex/: README.md  pubspec.yaml
llamalibrary_ex/lib/: llamalib.dart  main.dart  modelload.dart
llamalibrary_ex/test/: widget_test.dart
model/: benchmark.txt  requirements.txt  setting.txt
model-server/: inference.py  requirements.txt
model/SD/: SD_inference.ipynb  diffusers_example.ipynb
model/ko-llm/: constant.py  download_model.py  hugging-face.py  inference.py  utils.py
model/llama/: ai_hub.ipynb  ko-llm-sample-run.py
server/: main.py  requirements.txt
(+142 files in other folders)
